springboot-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path:
        pathType: ImplementationSpecific
        backend:
          service: 
            name: springboot-app
            port: 
              number: 80
